@@ -59,6 +59,7 @@ do_lavfi_pixfmts(){
 
 # all these filters have exactly one input and exactly one output
 do_lavfi_pixfmts "crop"    "100:100:100:100"
+do_lavfi_pixfmts "hflip"   ""
 do_lavfi_pixfmts "null"    ""
 do_lavfi_pixfmts "pad"     "500:400:20:20"
 do_lavfi_pixfmts "scale"   "200:100"
